corrected the social icons reduced the font size and made minor changes to the buttons that are looking too small

--- a/hanifat_portfolio/style.css
+++ b/hanifat_portfolio/style.css
@@ -21,6 +21,8 @@ body {
   font-weight: 400;
   scroll-behavior: smooth;
   color: #313133;
+  font-size: 2rem;
+  line-height: 2.5;
 }
 li {
   list-style: none;
@@ -70,7 +72,6 @@ a {
 
 .nav-links {
   display: flex;
-  font-size: 2.5rem;
   justify-content: space-around;
   padding: 1rem;
 }
@@ -137,36 +138,35 @@ a:hover {
 
 .hero img {
   width: 100%;
-  max-width: 400px;
+  max-width: 40rem;
 }
 
 .first h1 {
   font-family: "Montserrat", sans-serif;
   margin-top: 1rem;
-  font-size: 6rem;
+  font-size: 4rem;
   font-weight: bold;
 }
 
 .first-paragragh {
   color: var(--primary-color);
-  font-size: 20px;
+  font-size: 1.5rem;
   font-family: "Montserrat", sans-serif;
 }
 
 .second-paragragh {
   margin-top: 1rem;
-  font-size: 20px;
+  font-size: 1.5rem;
   font-weight: 300;
 }
 .email-me {
   display: flex;
-  margin-top: 8%;
+  margin-top: 8rem;
 }
 
 input {
-  margin-top: 50px;
-  padding: 12px;
-  width: 400px;
+  padding: 1.2rem;
+  width: 40rem;
   max-width: calc(90vw - 150px);
   z-index: 1;
   border: 1px solid var(--color-red);
@@ -174,14 +174,10 @@ input {
 }
 
 .portfolio-btn {
-  margin-left: -50px;
-  padding: 8px;
-  margin-top: 50px;
-
   background: var(--color-red);
   border: 0;
   font-weight: bold;
-  width: 150px;
+  padding: 0 3rem;
   z-index: 5;
 }
 
@@ -223,9 +219,8 @@ input {
 }
 .insidecontainer-aboutme p {
   color: rgb(224, 224, 224);
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin-top: 1rem;
-  line-height: 3.5rem;
 }
 
 .color-text {
@@ -235,7 +230,6 @@ input {
   color: var(--color-red);
 }
 div p {
-  line-height: 6rem;
   word-spacing: 0.3rem;
 }
 .buttons {
@@ -246,10 +240,8 @@ div p {
 }
 button {
   color: var(--primary-color);
-  padding: 9px;
-  width: 100px;
-  font-size: 1.4rem;
-  font-weight: bold;
+  padding: 1rem;
+  width: max-content;
   background-color: transparent;
   border: 1px solid var(--color-red);
   outline: none;
@@ -258,8 +250,10 @@ button a {
   color: var(--color-background-white);
 }
 
-.but1 button a:hover {
+.but1 button a:hover,
+.but button a:hover {
   background: none;
+  transform: scale(0.93);
 }
 .projects-intro h1 {
   margin-top: 1rem;
@@ -280,8 +274,6 @@ button a {
   column-gap: 2rem;
 }
 .project-container .content .project-text {
-  font-size: 2.5rem;
-  line-height: 6rem;
   word-spacing: 0.3rem;
 }
 .project-btn {
@@ -292,7 +284,6 @@ button a {
 }
 .project-btn a {
   padding: 0.5rem;
-  font-size: 1.35rem;
   color: var(--primary-color);
 }
 
@@ -305,14 +296,18 @@ button a {
 }
 .flex-items button a {
   color: var(--primary-color);
-  font-size: 1.4rem;
 }
 .flex-items button {
   margin-top: 1rem;
   width: 24%;
 }
+
+.flex-items button:hover {
+  background-color: var(--color-red);
+}
+
 .time {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: var(--color-red);
 }
 .project-container .skill {
@@ -326,13 +321,13 @@ button a {
   margin: 2rem;
   display: flex;
   justify-content: space-between;
-  width: 30%;
+  gap: 2rem;
 }
-.social-icons a {
-  margin-left: 4rem;
+.social-icons a:hover {
+  background-color: unset;
+  transform: scale(0.93);
 }
 .award-content {
-  font-size: 2.5rem;
   word-spacing: 2rem;
 }
 .award-content ul {
@@ -345,12 +340,11 @@ button a {
 /******************* BLOG SECTION STYLE ***********/
 
 .blog {
-  font-size: 2.5rem;
   margin: 0 2rem;
 }
 
 .blog__title {
-  font-size: 5rem;
+  font-size: 4rem;
   text-align: center;
   text-transform: uppercase;
   margin: 2rem;
@@ -379,7 +373,7 @@ button a {
   margin-top: 2rem;
 }
 .card-title {
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-transform: uppercase;
   color: var(--color-red);
 }
@@ -403,7 +397,7 @@ button a {
   border: 1px solid var(--color-red);
   margin: 5rem 0;
   border-radius: 1rem;
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-transform: uppercase;
   letter-spacing: 1px;
   padding: 1rem 2.5rem;
@@ -447,7 +441,7 @@ button a {
     color: #fff;
     flex-direction: column;
     align-items: center;
-    font-size: 4rem;
+    font-size: 3rem;
     transform: translateX(-100%);
     transition: all 0.2s;
   }
